--- a/projects/unittest/StringFormat/proj.win32/vc2015/StringFormat.vcxproj
+++ b/projects/unittest/StringFormat/proj.win32/vc2015/StringFormat.vcxproj
@@ -25,6 +25,7 @@
     <ProjectGuid>{78BA8501-2BC4-4A4D-97EE-1101421BD55E}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>TiActor</RootNamespace>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -76,22 +77,22 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)bin\$(MsvcPlatformToolset)\$(MsvcPlatformShortName)-$(Configuration)\unittest\</OutDir>
-    <IntDir>$(SolutionDir)\obj\$(MsvcPlatformToolset)\$(MsvcPlatformShortName)-$(Configuration)\unittest\$(ProjectName)\</IntDir>
+    <IntDir>$(SolutionDir)obj\$(MsvcPlatformToolset)\$(MsvcPlatformShortName)-$(Configuration)\unittest\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)bin\$(MsvcPlatformToolset)\$(MsvcPlatformShortName)-$(Configuration)\unittest\</OutDir>
-    <IntDir>$(SolutionDir)\obj\$(MsvcPlatformToolset)\$(MsvcPlatformShortName)-$(Configuration)\unittest\$(ProjectName)\</IntDir>
+    <IntDir>$(SolutionDir)obj\$(MsvcPlatformToolset)\$(MsvcPlatformShortName)-$(Configuration)\unittest\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)bin\$(MsvcPlatformToolset)\$(MsvcPlatformShortName)-$(Configuration)\unittest\</OutDir>
-    <IntDir>$(SolutionDir)\obj\$(MsvcPlatformToolset)\$(MsvcPlatformShortName)-$(Configuration)\unittest\$(ProjectName)\</IntDir>
+    <IntDir>$(SolutionDir)obj\$(MsvcPlatformToolset)\$(MsvcPlatformShortName)-$(Configuration)\unittest\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)bin\$(MsvcPlatformToolset)\$(MsvcPlatformShortName)-$(Configuration)\unittest\</OutDir>
-    <IntDir>$(SolutionDir)\obj\$(MsvcPlatformToolset)\$(MsvcPlatformShortName)-$(Configuration)\unittest\$(ProjectName)\</IntDir>
+    <IntDir>$(SolutionDir)obj\$(MsvcPlatformToolset)\$(MsvcPlatformShortName)-$(Configuration)\unittest\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
