修复了vc 2013的工程文件的完整性, 调整了一些工程文件的小细节, static_link.h现在更换到TiActor\basic目录下了.
Signed-off-by: shines77 <gz_shines@msn.com>

--- a/projects/main/libTiActor/proj.win32/vc2015/libTiActor.vcxproj.filters
+++ b/projects/main/libTiActor/proj.win32/vc2015/libTiActor.vcxproj.filters
@@ -210,9 +210,6 @@
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\system\sleep.h">
       <Filter>src\system</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\src\main\TiActor\config\static_link.h">
-      <Filter>src\config</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\config\ActorConfig.h">
       <Filter>src\config</Filter>
     </ClInclude>
@@ -299,6 +296,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\actor\children\IChildrenContainer.h">
       <Filter>src\actor\children</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\src\main\TiActor\basic\static_link.h">
+      <Filter>src\basic</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
