--- a/projects/main/libTiActor/proj.win32/vc2013/libTiActor.vcxproj
+++ b/projects/main/libTiActor/proj.win32/vc2013/libTiActor.vcxproj
@@ -204,6 +204,7 @@
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\basic\msvc\stdint.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\basic\msvc\targetver.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\basic\msvc\vld.h" />
+    <ClInclude Include="..\..\..\..\..\src\main\TiActor\basic\static_link.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\basic\stdbool.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\basic\stddef.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\basic\stdint.h" />
@@ -212,14 +213,15 @@
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\config\ActorConfig.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\config\Config.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\config\ConfigurationFactory.h" />
-    <ClInclude Include="..\..\..\..\..\src\main\TiActor\config\static_link.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\dispatch\ConcurrentQueueMailbox.h" />
+    <ClInclude Include="..\..\..\..\..\src\main\TiActor\dispatch\DeadLetterMailbox.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\dispatch\Dispatchers.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\dispatch\IMessageQueue.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\dispatch\Mailbox.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\dispatch\Mailboxes.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\dispatch\MessageDispatcher.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\dispatch\MessageQueueMailbox.h" />
+    <ClInclude Include="..\..\..\..\..\src\main\TiActor\dispatch\TaskDispatcher.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\dispatch\ThreadPoolDispatcher.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\queue\portable.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\queue\RingQueue.h" />
@@ -248,6 +250,7 @@
     <ClCompile Include="..\..\..\..\..\src\main\TiActor\actor\LocalActorRef.cpp" />
     <ClCompile Include="..\..\..\..\..\src\main\TiActor\actor\Props.cpp" />
     <ClCompile Include="..\..\..\..\..\src\main\TiActor\dispatch\Dispatchers.cpp" />
+    <ClCompile Include="..\..\..\..\..\src\main\TiActor\dispatch\MessageDispatcher.cpp" />
     <ClCompile Include="..\..\..\..\..\src\main\TiActor\system\sleep.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
