--- a/projects/main/libTiActor/proj.win32/vc2013/libTiActor.vcxproj.filters
+++ b/projects/main/libTiActor/proj.win32/vc2013/libTiActor.vcxproj.filters
@@ -282,11 +282,17 @@
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\config\ActorConfig.h">
       <Filter>src\config</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\src\main\TiActor\config\static_link.h">
-      <Filter>src\config</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\system\sleep.h">
       <Filter>src\system</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\src\main\TiActor\basic\static_link.h">
+      <Filter>src\basic</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\src\main\TiActor\dispatch\DeadLetterMailbox.h">
+      <Filter>src\dispatch</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\src\main\TiActor\dispatch\TaskDispatcher.h">
+      <Filter>src\dispatch</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -316,6 +322,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\..\..\src\main\TiActor\system\sleep.c">
       <Filter>src\system</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\src\main\TiActor\dispatch\MessageDispatcher.cpp">
+      <Filter>src\dispatch</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
