--- a/projects/main/libTiActor/proj.win32/vc2015/libTiActor.vcxproj
+++ b/projects/main/libTiActor/proj.win32/vc2015/libTiActor.vcxproj
@@ -205,6 +205,7 @@
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\basic\msvc\stdint.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\basic\msvc\targetver.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\basic\msvc\vld.h" />
+    <ClInclude Include="..\..\..\..\..\src\main\TiActor\basic\static_link.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\basic\stdbool.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\basic\stddef.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\basic\stdint.h" />
@@ -212,7 +213,6 @@
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\basic\threadlocal.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\config\Config.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\config\ConfigurationFactory.h" />
-    <ClInclude Include="..\..\..\..\..\src\main\TiActor\config\static_link.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\config\ActorConfig.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\dispatch\ConcurrentQueueMailbox.h" />
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\dispatch\DeadLetterMailbox.h" />
